--- a/style.css
+++ b/style.css
@@ -46,15 +46,14 @@ body{
 		padding-right: 0;
 	}
 	#mainNav .navbar-nav>li>a {
-		font-size: 14px;
+		font-size: 16px;
 		padding-top: 72px;
-        padding-left: 20px;
-        padding-right: 20px;
+		padding-left: 20px;
+		padding-right: 20px;
 	}
 	#mainNav .navbar-nav>li.big>a {
-		padding-left: 10px!important;
-        padding-right: 10px!important;
-        font-size: 14px;
+		padding-left: 20px!important;
+		padding-right: 20px!important;
 	}
     
 	#headerNab .navbar-nav>li>a {
@@ -199,7 +198,15 @@ body{
 #resumenNoticias .contNoticias .titulo{
 	height: 700px;
 }
-
+resumenNoticias .contNoticias .titulo h2{
+	color: #fff;
+	font-size: 40px;
+	padding-left: 40px;
+	padding-right: 40px;
+	position: absolute;
+	bottom: 0;
+	font-weight: 500;
+}
 #resumenNoticias .contNoticias .titulo h2 span{
 	font-size: 14px;
 	display: block;
@@ -221,6 +228,15 @@ body{
 	color: #fff;
 	margin-top: 50px;
 	padding-right: 27px;
+}
+#resumenNoticias .resumen .noticia p{
+	margin-top: -4px;
+	margin-bottom: 15px;
+	font-size: 18px;
+}
+#resumenNoticias .resumen .noticia p.date{
+	color: rgba(255,255,255,0.6);
+	font-size: 12px;
 }
 #resumenNoticias .resumen .noticia img{
 	float: right;
@@ -286,7 +302,6 @@ body{
     background-color: #f05423;
     color: #fff;
     height: 60px;
-
     padding: 15px 40px;
 	}
 	.tabPanelContent .nav.nav-tabs li{
@@ -307,10 +322,12 @@ body{
 }
 .tab-content p.bajada{
 	font-family: 'calibri', serif;
+	font-size: 20px;
 	text-align: center;
 	font-style: italic;
-	margin-bottom: 50px;
+	margin: 0 auto 50px auto;
 	color: #fff;
+	width: 80%;
 }
 
 .tabPanelContent .contBox{
@@ -318,27 +335,26 @@ body{
 	margin-bottom: 50px;
 }
 .tabPanelContent .box{
-	max-width: 295px;
-	box-sizing: border-box;
-	height: 350px;
-    width: 16.66666667%;
-    margin: 0 auto;
-    float: none;
-    color: #fff;
-    text-align: left;
-    display: inline-block;
-    vertical-align: top;
-    margin-right: -10px;
+		max-width: 295px;
+		box-sizing: border-box;
+	    width: 16.66666667%;
+	    margin: 0 auto;
+	    float: none;
+	    color: #fff;
+	    text-align: left;
+	    display: inline-block;
+	    vertical-align: top;
+	    margin-right: -10px;
 }
 .tabPanelContent .box .contenido{
-	position: relative;
-	width: 100%;
-	height: 350px;
-	background: no-repeat center;
-	background-size: cover;
-	box-sizing: border-box;
-	padding-top: 20px;
-	position: relative;
+		position: relative;
+		width: 100%;
+		height: 450px;
+		background: no-repeat center;
+		background-size: cover;
+		box-sizing: border-box;
+		padding-top: 30px;
+		padding-bottom: 30px;
 }
 .tabPanelContent .box .contenido .circle{
 	width: 70px;
@@ -351,22 +367,26 @@ body{
 	padding-left: 30px;
 }
 .tabPanelContent .box .contenido p{
-	font-size: 11px;
+	font-size: 16px;
 }
 .tabPanelContent .box .contenido h4{
-	font-size: 16px;
-	margin-top: -5px;
-	padding-right: 35px;
+		font-size: 24px;
+		margin-top: -5px;
+		padding-right: 20px;
+		line-height: 1.2;
+		font-weight: 300;
 }
 
 .tabPanelContent .box .contenido .datos{
 	position: absolute;
-	bottom: 5px;
+	bottom: 10px;
 	width: 100%;
 }
-
+.tabPanelContent .box .contenido .datos p{
+		font-size: 12px;
+}
 .tabPanelContent .box .contenido .datos p span{
-	font-size: 9px;
+	font-size: 10px;
 }
 .tabPanelContent .box .contenido .datos p img{
 	margin-top: 5px;
@@ -410,7 +430,9 @@ body{
 	padding-top: 30px;
 }
 .tabPanelContent #proyectos .box .contenido h4{
-	font-size: 15px;
+	font-size: 20px;
+	line-height: 1.3;
+	font-weight: 300;
 }
 
 .tabPanelContent .big.borde .box .contenido{
@@ -427,7 +449,7 @@ body{
 
 h2.tituloSeccion{
 	color: #f05423;
-	font-size: 24px;
+	font-size: 28px;
 	margin-top: 0;
 	margin-bottom: 30px;
 }
@@ -453,7 +475,7 @@ h2.tituloSeccion:after{
 	border: 1px solid #6c7b8a;
 	height: 260px;
 	padding: 30px;
-	font-size: 19px;
+	font-size: 18px;
 	color: #3c4f5e;
 	position: relative;
 }
