--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ body{
 #resumenNoticias .contNoticias .titulo{
 	height: 700px;
 }
-resumenNoticias .contNoticias .titulo h2{
+#resumenNoticias .contNoticias .titulo h2{
 	color: #fff;
 	font-size: 40px;
 	padding-left: 40px;
