--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@ body{
 	color: #3c4f5e;
 }
 
-a {
-	color: #3c4f5e!important;
-}
 
 .padL0{padding-left: 0 !important;}
 .padR0{padding-right: 0 !important;}
@@ -53,9 +50,9 @@ a {
 	#mainNav .navbar-nav>li>a {
 		font-size: 18px;
 		padding-top: 72px;
-		padding-left: 10px;
-		padding-right: 10px;
-		font-family: Roboto Condensed, sans-serif;
+		padding-left: 15px;
+		padding-right: 15px;
+		font-family: Roboto Condensed, sans-serif!important;
 	}
 	#mainNav .navbar-nav>li.big>a {
 		padding-left: 10px!important;
@@ -66,7 +63,8 @@ a {
     
 	#headerNab .navbar-nav>li>a {
     padding: 10px 20px !important;
-    font-size: 12px;
+    font-family: Roboto Condensed, sans-serif;
+    font-size: 14px;
 }
 
     
@@ -307,7 +305,7 @@ a {
     border: none;
     border-radius: 0;
     background-color: #f05423;
-    color: #fff;
+    color: #fff!important;
     height: 60px;
     padding: 15px 40px;
 	}
@@ -379,7 +377,7 @@ a {
 .tabPanelContent .box .contenido h4{
 		font-size: 24px;
 		margin-top: -5px;
-		padding-right: 20px;
+		padding-right: 30px;
 		line-height: 1.2;
 		font-weight: 300;
 }
