--- a/style.css
+++ b/style.css
@@ -315,6 +315,7 @@ body{
 		margin-right: -3px;
 		font-size: 24px;
 		font-weight: 100;
+		border-right: 1px solid #fff;
 	} 
 
 .nav-tabs>li>a:hover{
@@ -419,7 +420,7 @@ body{
     border: 3pt solid #d9cda3;
 }
 .tabPanelContent #publicaciones .box .contenido .datos{
-	padding-right: 10px;
+	padding-right: 20px;
 	background-color: #ffffff;
 	padding-top: 15px;
 	bottom: 0;
