--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
-
+/*
+Theme Name: Cigiden
+Theme URI: 
+Author: Gabriel Lagrotteria
+Author URI: 
+Description: template para cigiden
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: black, 
+Text Domain:
+*/
 
 body{
 	font-family: 'calibri', sans-serif;
 	width: 100%;
-	color: #3c4f5e;
 }
-
 
 .padL0{padding-left: 0 !important;}
 .padR0{padding-right: 0 !important;}
@@ -48,23 +57,28 @@ body{
 		padding-right: 0;
 	}
 	#mainNav .navbar-nav>li>a {
-		font-size: 18px;
+		font-size: 14px;
 		padding-top: 72px;
-		padding-left: 15px;
-		padding-right: 15px;
-		font-family: Roboto Condensed, sans-serif!important;
+        padding-left: 20px;
+        padding-right: 20px;
 	}
 	#mainNav .navbar-nav>li.big>a {
 		padding-left: 10px!important;
-		padding-right: 10px!important;
-		font-weight: 400!important;
-		
+        padding-right: 10px!important;
+        font-size: 14px;
 	}
     
 	#headerNab .navbar-nav>li>a {
     padding: 10px 20px !important;
-    font-family: Roboto Condensed, sans-serif;
-    font-size: 14px;
+    font-size: 12px;
+}
+
+.tabPanelContent .box .contenido h4{
+	font-size: 20px;
+	margin-top: -5px;
+	padding-right:20px;
+    font-weight: 300;
+    line-height: 1.2;
 }
 
     
@@ -123,7 +137,7 @@ body{
 }
 
 #mainNav .navbar-nav> li.active > a {
-    color: #a6b6c7!important;
+    color: #a6b6c7;
     background-color: transparent;
 }
 
@@ -141,15 +155,16 @@ body{
 
 
 #mainNav .navbar-nav>li.big>a {
-	font-size: 20px;
-	margin-top: -21px;
+	font-size: 16px;
+	font-weight: 700;
+	margin-top: -13px;
 	text-transform: uppercase;
 	padding-left: 10px;
 	padding-right: 10px;
 }
 #mainNav .navbar-nav>li.big>a span{
 	display: block;
-
+	line-height: 0.8em;
 }
 
 
@@ -203,6 +218,7 @@ body{
 #resumenNoticias .contNoticias .titulo{
 	height: 700px;
 }
+
 #resumenNoticias .contNoticias .titulo h2{
 	color: #fff;
 	font-size: 40px;
@@ -212,12 +228,23 @@ body{
 	bottom: 0;
 	font-weight: 500;
 }
+
 #resumenNoticias .contNoticias .titulo h2 span{
 	font-size: 14px;
 	display: block;
 	color: rgba(255,255,255,0.6);
 	margin-top: 10px;
 	margin-bottom: 50px;
+}
+
++#resumenNoticias .resumen .noticia p{
+	margin-top: -4px;
+	margin-bottom: 15px;
+	font-size: 18px;
+}
+#resumenNoticias .resumen .noticia p.date{
+	color: rgba(255,255,255,0.6);
+	font-size: 12px;
 }
 
 #resumenNoticias .resumen{
@@ -234,30 +261,18 @@ body{
 	margin-top: 50px;
 	padding-right: 27px;
 }
-#resumenNoticias .resumen .noticia p{
-	margin-top: -4px;
-	margin-bottom: 15px;
-	font-size: 18px;
-}
-#resumenNoticias .resumen .noticia p.date{
-	color: rgba(255,255,255,0.6);
-	font-size: 12px;
-}
 #resumenNoticias .resumen .noticia img{
 	float: right;
 	padding-right: 5px;
 }
 
 
-
 #resumenNoticias .resumen .linkNoticia{
-	padding-right: 37px;
-	float: right;
-	margin-top: 50px;
-	color: #fff;
+ 		padding-right: 37px;
+	 	float: right;
+ 	     margin-top: 50px;
+ 	color: #fff;		 	
 }
-
-
 
 
 /*Proyectos Destacados*/
@@ -293,7 +308,9 @@ body{
 	float: none;
 	display: inline-block;
 	margin-right: -3px;
+    border-right: 1px solid #fff;
 }
+
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
 	background-color: #6c7b8a;
 	color: #fff;
@@ -305,17 +322,17 @@ body{
     border: none;
     border-radius: 0;
     background-color: #f05423;
-    color: #fff!important;
+    color: #fff;
     height: 60px;
     padding: 15px 40px;
 	}
+
 	.tabPanelContent .nav.nav-tabs li{
 		float: none;
 		display: inline-block;
 		margin-right: -3px;
 		font-size: 24px;
 		font-weight: 100;
-		border-right: 1px solid #fff;
 	} 
 
 .nav-tabs>li>a:hover{
@@ -328,12 +345,12 @@ body{
 }
 .tab-content p.bajada{
 	font-family: 'calibri', serif;
-	font-size: 20px;
+    font-size: 20px;
 	text-align: center;
 	font-style: italic;
-	margin: 0 auto 50px auto;
 	color: #fff;
-	width: 80%;
+    width: 80%;
+    margin: 0 auto 50px auto;
 }
 
 .tabPanelContent .contBox{
@@ -341,27 +358,28 @@ body{
 	margin-bottom: 50px;
 }
 .tabPanelContent .box{
-		max-width: 295px;
-		box-sizing: border-box;
-	    width: 16.66666667%;
-	    margin: 0 auto;
-	    float: none;
-	    color: #fff;
-	    text-align: left;
-	    display: inline-block;
-	    vertical-align: top;
-	    margin-right: -10px;
+	max-width: 295px;
+	box-sizing: border-box;
+    width: 16.66666667%;
+    margin: 0 auto;
+    float: none;
+    color: #fff;
+    text-align: left;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: -10px;
 }
 .tabPanelContent .box .contenido{
-		position: relative;
-		width: 100%;
-		height: 450px;
-		background: no-repeat center;
-		background-size: cover;
-		box-sizing: border-box;
-		padding-top: 30px;
-		padding-bottom: 30px;
+	position: relative;
+	width: 100%;
+	height: 450px;
+	background: no-repeat center;
+	background-size: cover;
+	box-sizing: border-box;
+	padding-top: 30px;
+    padding-bottom: 30px;
 }
+
 .tabPanelContent .box .contenido .circle{
 	width: 70px;
 	height: 70px;
@@ -375,28 +393,24 @@ body{
 .tabPanelContent .box .contenido p{
 	font-size: 16px;
 }
-.tabPanelContent .box .contenido h4{
-		font-size: 24px;
-		margin-top: -5px;
-		padding-right: 30px;
-		line-height: 1.2;
-		font-weight: 300;
-}
+
 
 .tabPanelContent .box .contenido .datos{
 	position: absolute;
 	bottom: 10px;
 	width: 100%;
 }
+
 .tabPanelContent .box .contenido .datos p{
-		font-size: 12px;
+    font-size: 12px;
 }
+
 .tabPanelContent .box .contenido .datos p span{
 	font-size: 10px;
+	display:block;
 }
 .tabPanelContent .box .contenido .datos p img{
 	margin-top: 5px;
-	margin-right: 5px;
 }
 
 .tabPanelContent .btn-default{
@@ -429,7 +443,7 @@ body{
 
 /* Proyectos */
 .tabPanelContent #proyectos .box .contenido .datos{
-	padding-right: 10px;
+	
 }
 .tabPanelContent #proyectos .box .contenido{
 	background-color: #003366;
@@ -437,12 +451,18 @@ body{
 }
 .tabPanelContent #proyectos .box .contenido h4{
 	font-size: 20px;
-	line-height: 1.3;
-	font-weight: 300;
+    line-height: 1.3;
+    font-weight: 300;
 }
+
 
 .tabPanelContent .big.borde .box .contenido{
 	border: 6px solid #d9cda3;
+}
+
+.tabPanelContent #proyectos .box .contenido .texto {
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 
@@ -485,6 +505,7 @@ h2.tituloSeccion:after{
 	color: #3c4f5e;
 	position: relative;
 }
+
 #agendaColumna .agenda .box .fecha{
 	width: 55px;
 	height: 50px;
@@ -638,12 +659,10 @@ h2.tituloSeccion:after{
     font-weight: 500;
 }
 
-#twitter .redesSociales:nth-of-type(2) a{
- margin-left: 110px;
-}
 
-.redesSociales:nth-of-type(3) a{
- margin-left: 100px !important;
+.redesSociales:nth-of-type(3) a {
+    margin-left: 69px !important;
+    margin-top: 120px !important;
 }
 
 
@@ -1234,6 +1253,41 @@ footer ul.rs li{
 
 
 
+@media (min-width: 1200px) and (max-width:1339px){
+
+
+	.navbar .container {
+		width: 85%;
+	}
+    
+       .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
+        margin-left: 0px;
+    }
+
+
+	.navbar-collapse {
+		padding-right: 0;
+	}
+	#mainNav .navbar-nav>li>a {
+		font-size: 14px;
+		padding-top: 72px;
+        padding-left: 0px;
+        padding-right: 20px;
+	}
+	#mainNav .navbar-nav>li.big>a {
+		padding-left: 10px!important;
+        padding-right: 10px!important;
+        font-size: 14px;
+	}
+    
+	#headerNab .navbar-nav>li>a {
+    padding: 10px 20px !important;
+    font-size: 12px;
+}
+}
+
+
+
 @media (min-width: 1024px) and (max-width: 1199px){
     
     .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
@@ -1247,20 +1301,22 @@ footer ul.rs li{
 		padding-right: 0;
 	}
 	#mainNav .navbar-nav>li>a {
-		font-size: 14px;
+		font-size: 16px;
 		padding-top: 72px;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 20px;
+        padding-right: 20px;
 	}
 	#mainNav .navbar-nav>li.big>a {
-		padding-left: 10px!important;
-        padding-right: 10px!important;
+		padding-left: 20px !important;
+        padding-right: 20px !important;
         font-size: 14px;
 	}
 	#headerNab .navbar-nav>li>a {
     padding: 10px 20px !important;
     font-size: 12px;
 }
+
+	.tabPanelContent .box{}
 
     }
 
